--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/nodemailer": "^7.0.3",
     "autoprefixer": "^10.4.17",
+    "marked": "^17.0.1",
     "next": "14.1.0",
     "nodemailer": "^7.0.10",
     "postcss": "^8.4.35",
